<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_joueur1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_joueur1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_joueur2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_joueur2" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_jouer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_jouer" />
</LinearLayout>